deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seo-class-web-training
  name: seo-class-web-training
  namespace: training
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: seo-class-web-training
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: seo-class-web-training
    spec:
      containers:
        - image: seo-class-web/training/seo-class-web:latest
          imagePullPolicy: Always
          name: seo-class-web-training
          ports:
            - containerPort: 3000
              name: application
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              ephemeral-storage: 2Gi
              memory: 350Mi
            requests:
              cpu: 50m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: seo-class-web-training-svc
  namespace: training
spec:
  ports:
    - name: svc
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: seo-class-web-training
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
